# polyNBA

./: .gitignore  conftest.py  pyproject.toml
config/: cavs_hornets.json  celtics_nuggets.json  jazz_grizzlies.json  markets.json  small.json  suns_spurs.json  thunder_pistons.json  tonight.json
scripts/: test_split_merge.py
src/: ctf.py  runner.py
src/mm/: __init__.py  config.py  divergence.py  engine.py  fair_value.py  integration_test.py  inventory.py  latency.py  models.py  order_manager.py  quoting.py  risk.py
src/reference/: __init__.py  betfair_client.py  compare_game.py  composite_fetcher.py  draftkings_client.py  fanduel_client.py  kalshi_client.py  kalshi_models.py  market_analysis.py  market_mapper.py  models.py  odds_client.py  odds_models.py  polymarket_scanner.py  price_adapter.py  staleness.py  validate.py  vig_removal.py
tests/: test_betfair_client.py  test_composite_fetcher.py  test_ctf.py  test_data_orderbook.py  test_data_stress.py  test_data_trade_feed.py  test_data_ws_client.py  test_draftkings_client.py  test_fanduel_client.py  test_fill_monitoring.py  test_kalshi_client.py  test_mm_accumulation.py  test_mm_cross_prevention.py  test_mm_divergence.py  test_mm_divergence_ema.py  test_mm_fill_requote.py  test_mm_integration.py  test_mm_inventory.py  test_mm_latency.py  test_mm_order_cancel.py  test_mm_pairs.py  test_mm_quoting.py  test_mm_risk.py  test_mm_thread_safety.py  test_reference_edge_cases.py  test_reference_mapper.py  test_reference_validate.py  test_reference_vig.py  test_scanner_events.py
